syntax = "proto3";

package auth;
option go_package = "./;grpc";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

service AuthService {
  rpc Register (RegisterRequest) returns (RegisterResponse) {
    option (google.api.http) = {
      post: "/auth/register"
      body: "*"
    };
  }

  rpc Login (LoginRequest) returns (TokenResponse) {
    option (google.api.http) = {
      post: "/auth/login"
      body: "*"
    };
  }

  rpc Logout (LogoutRequest) returns (LogoutResponse) {
    option (google.api.http) = {
      post: "/auth/logout"
      body: "*"
    };
  }

  rpc Refresh (google.protobuf.Empty) returns (TokenResponse) {
    option (google.api.http) = {
      get: "/auth/refresh"
    };
  }
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message RefreshRequest {
  string refresh_token = 1;
}

message TokenResponse {
  string access_token = 1;
  string refresh_token = 2;
}

message LogoutResponse {
  bool success = 1;
}

message LogoutRequest {
  string refresh_token = 1;
}

message User {
  int32 id = 1;
  string username = 2;
  string role = 3;
}

message RegisterRequest {
  string username = 1;
  string password = 2;
}

message RegisterResponse {
  bool success = 1;
  string error = 2;
}